# GemmaEvolve

./: .gitignore  README.md  pyproject.toml
docs/: agents.md  helloworld_function.py
experiments/: budgeted_coverage.toml  budgeted_coverage_seed.py  erdos_problem_19_evaluator.py  erdos_problem_19_full_file.toml  erdos_problem_19_seed.py  knapsack.toml  knapsack_portfolio_seed.py  knapsack_seed.py  score_evaluator.py  turan_tetrahedron.toml  turan_tetrahedron_full_file.toml  turan_tetrahedron_seed.py  weighted_tardiness.toml  weighted_tardiness_seed.py
experiments-knapsack-portfolio-best/: knapsack_portfolio.toml  knapsack_portfolio_seed.py  score_evaluator.py
src/alphaevolve/: __init__.py  archive.py  cli.py  config.py  controller.py  diffing.py  errors.py  evaluators.py  llm.py  logging_utils.py  models.py  prompts.py  token_estimator.py
tests/: test_archive.py  test_cli.py  test_config.py  test_controller.py  test_diffing.py  test_evaluators.py  test_experiments.py  test_llm.py  test_prompts.py  test_smoke_hooks.py
