[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "alphaevolve"
version = "0.1.0"
description = "Asynchronous evolutionary code generation pipeline inspired by AlphaEvolve."
readme = "docs/agents.md"
requires-python = ">=3.12"
dependencies = [
  "httpx>=0.27,<1.0",
]

[project.optional-dependencies]
docker = [
  "docker>=7.1,<8.0",
]
dev = [
  "pytest>=8.3,<9.0",
]

[project.scripts]
alphaevolve = "alphaevolve.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/alphaevolve"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
